<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="#ffffff">

    <!-- Текущий игрок -->
    <TextView
        android:id="@+id/playerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <!-- Первая строка кнопок -->
        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_1"
            android:textSize="24sp"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_2"
            android:textSize="24sp"
            android:layout_row="0"
            android:layout_column="1" />


        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_3"
            android:textSize="24sp"
            android:layout_row="0"
            android:layout_column="2" />

        <!-- Вторая строка кнопок -->
        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_4"
            android:textSize="24sp"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_5"
            android:textSize="24sp"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_6"
            android:textSize="24sp"
            android:layout_row="1"
            android:layout_column="2" />

        <!-- Третья строка кнопок -->
        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_7"
            android:textSize="24sp"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_8"
            android:textSize="24sp"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:contentDescription="@string/button_description_9"
            android:textSize="24sp"
            android:layout_row="2"
            android:layout_column="2" />

    </GridLayout>
    <!-- Добавляем кнопку для сброса игры -->
    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_game"
        android:layout_below="@id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Отображение счета -->
    <TextView
        android:id="@+id/player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/button_reset"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/player2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/player1Score"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

</RelativeLayout>
